--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ip-address": "^8.1.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
