--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "core",
-  "version": "1.0.0",
+  "name": "ip-route",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,13 @@
     "@typescript-eslint/parser": "^5.3.1",
     "chai": "^4.3.4",
     "eslint": "^8.2.0",
+    "husky": "^7.0.4",
     "mocha": "^9.1.3",
     "ts-node": "^10.4.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
   }
 }
