--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm test"
+      "pre-commit": "npm run test",
+      "pre-push": "npm run test"
     }
   }
 }
