--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -r ts-node/register ./**/*.test.ts",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
