--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-        ts-project: [src/tsconfig.json]
+        ts-project: [tsconfig.json]
 
     env:
       TS_NODE_PROJECT: ${{ matrix.ts-project }}
