--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^16.11.7",
     "ip-address": "^8.1.0",
     "typescript": "^4.4.4"
   },
