--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,10 +1,9 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: deploy
+name: Code Test And Build Test
 
-on: workflow_dispatch
-  - pu
+on: [push, workflow_dispatch]
 
 jobs:
   build:
@@ -31,6 +30,5 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
-    - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
