--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,7 +21,7 @@ jobs:
       name: Use Node.js ${{ matrix.node-version }}
 
     - uses: actions/setup-node@v2
-      name: 'npm install && npm build && npm publish'
+      name: 'npm install && npm build'
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: https://registry.npmjs.org/
