--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,9 @@
 
 name: Deploy
 
-on : [workflow_dispatch, release]
+on :
+  release:
+    types: [created, edited]
 
 jobs:
   build:
@@ -30,6 +32,6 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run build --if-present
-    - run: npm publish
+    - run: npm publish --access=public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
