--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moretall/ip-route",
+  "name": "@moretall/ip-trace",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
