--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc --build",
     "prepare": "husky install"
   },
+  "types": "dist/index.d.ts",
   "keywords": [],
   "author": "moretall",
   "license": "ISC",
