--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ip-trace": "^0.0.3"
+    "ip-trace": "^0.0.4",
+    "ts-node": "^10.4.0"
   }
 }
