--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ip-trace",
   "version": "0.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "mocha -r ts-node/register ./**/*.test.ts",
     "build": "tsc --build",
