--- a/example/package.json
+++ b/example/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ip-trace": "^0.0.4",
+    "ip-trace": "^0.0.5",
     "ts-node": "^10.4.0"
   }
 }
