--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "moretall",
   "license": "ISC",
   "dependencies": {
-    "ip-address": "^8.1.0",
+    "ip-address": "^8.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
     "@types/node": "^16.11.7",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
@@ -33,5 +33,8 @@
       "pre-push": "npm run test"
     }
   },
-  "os": ["darwin", "linux"]
+  "os": [
+    "darwin",
+    "linux"
+  ]
 }
